Close to where I was before I deleted the last copy

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 
+# Don't commit keys
+*.pem
+
 # Created by https://www.gitignore.io/api/go,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=go,visualstudiocode
 
