--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 
 # Don't commit keys
 *.pem
+/eveAPI/config.json
 
 # Created by https://www.gitignore.io/api/go,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=go,visualstudiocode
