--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.pem
 /eveAPI/config.json
 /main/tls
+/main/users
 
 # Created by https://www.gitignore.io/api/go,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=go,visualstudiocode
