Add buk eve data

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 /main/tls
 /main/users
 
+## Bulk data
+/wwwroot/eve/data
+
 # Created by https://www.gitignore.io/api/go,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=go,visualstudiocode
 
